Fixed compiler warning.